k8s/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: zevisert/zuzi-site-frontend
        imagePullPolicy: IfNotPresent
        name: zuzi-site
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 500M
          requests:
            cpu: 100m
            memory: 100M
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
