k8s/next.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: next
  name: next
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: next
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: next
    spec:
      containers:
        - image: zevisert/zuzi-site
          imagePullPolicy: IfNotPresent
          name: zuzi-site
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 1000M
            requests:
              cpu: 100m
              memory: 100M
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
