k8s/server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server

spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: server
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      - name: zuzi-site
        image: zevisert/zuzi-site-server
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /secrets/mongodb
            name: mongodb-creds
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 800m
            memory: 500M
          requests:
            cpu: 200m
            memory: 100M
      volumes:
        - name: mongodb-creds
          secret:
            secretName: mongodb-admin-koa
            optional: true
