k8s/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - name: api
    port: 80
    protocol: TCP
    targetPort: 80
