k8s/http.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http
  name: http
  namespace: zuzi-site
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
